[gd_scene load_steps=4 format=3 uid="uid://blqp7vyvbe5mq"]

[ext_resource type="Script" uid="uid://etobnmtajeqt" path="res://Script/Menu/player_select.gd" id="1_yh01e"]
[ext_resource type="PackedScene" uid="uid://c78tlamhdk2i5" path="res://Scenes/Marble/draggable_marble.tscn" id="2_c3nyd"]
[ext_resource type="Texture2D" uid="uid://dqrsxtgfa0ky1" path="res://Assets/popup.png" id="2_nwvtu"]

[node name="PlayerSelect" type="Node2D"]
script = ExtResource("1_yh01e")

[node name="AddPlayer" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.0
offset_top = -32.5
offset_right = 34.0
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2
text = "+"

[node name="Background" type="Node2D" parent="."]
position = Vector2(-601, 181)

[node name="BackgroundImg" type="Sprite2D" parent="Background"]
position = Vector2(601, 545.5)
scale = Vector2(1.8703704, 1.8526785)
texture = ExtResource("2_nwvtu")

[node name="Label" type="Label" parent="Background"]
offset_left = 512.0
offset_top = 375.0
offset_right = 687.0
offset_bottom = 429.0
text = "name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RemovePlayer" type="Button" parent="Background"]
offset_left = 526.0
offset_top = 669.0
offset_right = 679.0
offset_bottom = 707.0
text = "Remove Player"

[node name="Marbles" type="Node2D" parent="."]
z_index = 1

[node name="DraggableMarble1" parent="Marbles" groups=["pickable"] instance=ExtResource("2_c3nyd")]
position = Vector2(4, 636)

[node name="DraggableMarble2" parent="Marbles" groups=["pickable"] instance=ExtResource("2_c3nyd")]
position = Vector2(25, 699)

[node name="DraggableMarble3" parent="Marbles" groups=["pickable"] instance=ExtResource("2_c3nyd")]
position = Vector2(-48, 619)

[node name="DraggableMarble4" parent="Marbles" groups=["pickable"] instance=ExtResource("2_c3nyd")]
position = Vector2(-29, 704)

[connection signal="pressed" from="AddPlayer" to="." method="_on_add_player_pressed"]
[connection signal="pressed" from="Background/RemovePlayer" to="." method="_on_remove_player_pressed"]
